icon of page added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSSGO.</title>
+    <link rel="icon" type="x-icon" href="Images/css.png">
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -109,15 +110,51 @@
         <div id="flex-editor">
           <h1>FLEX PROPERTIES</h1>
           <div id="flex-settings">
-              <h3>JUSTIFY-CONTENT</h3>
-              <div class="flex-button">
-                <button class="jc" data-property="justify-content" data-value="flex-start">Flex-Start</button>
-                <button class="jc" data-property="justify-content" data-value="flex-end">Flex-End</button>
-                <button class="jc" data-property="justify-content" data-value="center">Center</button>
-                <button class="jc" data-property="justify-content" data-value="space-between">Space-Between</button>
-                <button class="jc" data-property="justify-content" data-value="space-around">Space-Around</button>
-                <button class="jc" data-property="justify-content" data-value="space-evenly">Space-Evenly</button>
-              </div>
+            <h3>JUSTIFY-CONTENT</h3>
+            <div class="flex-button">
+              <button
+                class="jc"
+                data-property="justify-content"
+                data-value="flex-start"
+              >
+                Flex-Start
+              </button>
+              <button
+                class="jc"
+                data-property="justify-content"
+                data-value="flex-end"
+              >
+                Flex-End
+              </button>
+              <button
+                class="jc"
+                data-property="justify-content"
+                data-value="center"
+              >
+                Center
+              </button>
+              <button
+                class="jc"
+                data-property="justify-content"
+                data-value="space-between"
+              >
+                Space-Between
+              </button>
+              <button
+                class="jc"
+                data-property="justify-content"
+                data-value="space-around"
+              >
+                Space-Around
+              </button>
+              <button
+                class="jc"
+                data-property="justify-content"
+                data-value="space-evenly"
+              >
+                Space-Evenly
+              </button>
+            </div>
           </div>
         </div>
         <div id="flex-display">
@@ -133,12 +170,23 @@
         </div>
       </div>
       <div id="footer">
-        <h1>Coded with <span> <img src="Images/heartbpng.png" alt="" class="img-heart"></span> by</h1>
+        <!-- <audio src="way down.mp3" autoplay loop controls preload="metadata"></audio> -->
+        <h1>
+          Coded with
+          <span>
+            <img src="Images/heartbpng.png" alt="" class="img-heart"
+          /></span>
+          by
+        </h1>
         <h1>rahul rajbhandari</h1>
         <p>
-           &copy; 2024. CSSGO. All Rights Reserved. Design Creativity 
-           <a href="https://www.linkedin.com/in/rahul-rajbhandari-290876284/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BQK0%2Bc4XXSaGNuLgV7fmdfg%3D%3D"> Rahul Rajbhandari</a>
-          </p>
+          &copy; 2024. CSSGO. All Rights Reserved. Design Creativity
+          <a
+            href="https://www.linkedin.com/in/rahul-rajbhandari-290876284/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BQK0%2Bc4XXSaGNuLgV7fmdfg%3D%3D"
+          >
+            Rahul Rajbhandari</a
+          >
+        </p>
       </div>
     </div>
     <script src="script.js"></script>
